[package]
name = "parallel-surreal"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
futures = { version = "0.3.31", features = ["futures-executor"] }
rand = { version = "0.9.1", features = [
    "nightly",
    "log",
    "serde",
    "simd_support",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
surrealdb = { version = "2.2.2", features = ["http", "protocol-http"] }
tokio = { version = "1.44.2", features = ["full"] }

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1
